2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-06  Andy Wingo  <wingo@pobox.com>

	* generate-docs.mk (GTK_DOC_GENERATE_UNDOCUMENTED): 
	(generate-undocumented): Add targets to regenerate
	undocumented.texi.

2007-11-25  Andy Wingo  <wingo@pobox.com>

	* generate-docs.mk (GUILE): Fix a typo.

	* dev-environ.in (ALL_PKGS): Add bin/ to the path if the package
	has one.

	* tests.mk: 
	* generate-docs.mk: So, just use guile-gnome-0 if glib is not in
	the packages set, because if glib is in the set, then dev-environ
	is sufficient for setting up the enviroment.

2007-11-15  Andy Wingo  <wingo@pobox.com>

	* tests.mk (GUILE): 
	* generate-docs.mk (GUILE): Use guile-gnome-0, because we want
	(gnome-0) to have been loaded.

	* scripts/review-api: New script, generates a minimal texinfo file
	that one can use to review wrapped API.

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* tests.mk: New file, common makefile snippets for running API
	regression suites.

	* generate-docs.mk (check-coverage): New target, checks the
	coverage of the documentation.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-24  Andy Wingo  <wingo@pobox.com>

	* generate-docs.mk: Rework to deal with new gtk-doc.scm interface.

2007-09-07  Andy Wingo  <wingo@pobox.com>

	* generate-docs.mk: New common makefile snippet for generated
	docs.

2007-08-25  Andy Wingo  <wingo@pobox.com>

	* common.mk (.c.doc): Update so that making .doc files works;
	still needs some filtering though.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>
