@@ -1,3 +1,8 @@
+2008-04-09  Andy Wingo  <wingo@pobox.com>
+
+	* autogen-pkg.sh: Output a more modern configure.ac. Tell automake
+	to not worry about non-portable make.
+
 2007-12-10  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.96 ==
